feat: modify function for filter item dropdown works for just ingredient ustensil appliance not for name recipes or wordgroup

--- a/style.css
+++ b/style.css
@@ -436,6 +436,11 @@ main {
     top: 25px;
 }
 
+.valid {
+    display: block!important;
+}
+
+
 @media screen and (max-width : 1200px) {
     #logo_search {
         right: 130px;
