--- a/style.css
+++ b/style.css
@@ -78,20 +78,21 @@ main {
 
 #ingredients_input {
     background-color: #3282F7;
-}
-#ingredients_input:focus {
-    width: 667px;
-    
+    width: 215px;
 }
 
 #appareils_input {
     background-color: #68D9A4;
+    width: 210px;
 }
 
 #ustensiles_input {
     background-color: #ED6454;
+    width: 210px;
 }
-
+input:autofill {
+    display: none!important;
+}
 .tag_input {
     height: 70px;
     border-radius: 5px;
@@ -119,6 +120,10 @@ main {
     display: flex;
     height: 50px;
     gap: 25px;
+}
+.ingredients_results:hover {
+    background-color: mediumblue;
+    border-radius: 7px;
 }
 
 .ingredient_selected {
@@ -188,9 +193,8 @@ main {
     color: white;
     font-style: normal;
     font-weight: 700;
-    font-size: 18px;
+    font-size: 19px;
     line-height: 22px;
-    text-align: center;
 }
 
 /*--------------Gallery--------------------------------*/
@@ -369,6 +373,11 @@ main {
     background-color: #68D9A4;
 }
 
+.appareils_results:hover {
+    background-color: aquamarine;
+    border-radius: 7px;
+}
+
 /*-----------------------------------Ustensiles----------------------*/
 
 .filter_ustensiles {
@@ -405,8 +414,16 @@ main {
     background-color: #ED6454;
 }
 
+.ustensiles_results:hover {
+    background-color: brown;
+    border-radius: 7px;
+}
+
 .none {
     display: none;
+}
+.hidden_ul {
+    display:none;
 }
 
 .flex {
@@ -421,6 +438,14 @@ main {
     color: white;
     top: 25px;
 }
+
+.valid {
+    display: block!important;
+}
+.hidden {
+    display: none!important;
+}
+
 
 @media screen and (max-width : 1200px) {
     #logo_search {
